# tomlq

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yaml  release.yaml  weelky-scan.yaml
src/: legacy.rs  lib.rs  main.rs
