[package]
name = "tomlq"
version = "0.1.6"
authors = [
    "Natalia Maximo <iam@natalia.dev>",
    "James Munns <james.munns@gmail.com>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/cryptaliagy/tomlq"
description = "A tool for obtaining information from a TOML file on the command line"

[dependencies]
toml = "0.8"
clap = { version = "4.5", features = ["derive", "usage", "help"] }
thiserror = "1.0.61"
colored = { version = "2.1.0", optional = true }

[dependencies.serde_json] 
version = "1.0.120"
features = [
    "indexmap",
    "preserve_order",
    "raw_value",
    "unbounded_depth",
]
optional = true

[features]
default = ["json"]
color = ["colored"]
json = ["dep:serde_json"]

[lib]
name = "tq"
path = "src/lib.rs"
test = true
doctest = false

[[bin]]
name = "tq"
test = false

[package.metadata.binstall]
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/{ version }/{ name }.amd64{ archive-suffix }"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/{ version }/{ name }.arm64{ archive-suffix }"

[package.metadata.binstall.overrides.armv7-unknown-linux-gnueabi]
pkg-url = "{ repo }/releases/download/{ version }/{ name }.armv7{ archive-suffix }"

[package.metadata.binstall.overrides.armv7-unknown-linux-gnueabihf]
pkg-url = "{ repo }/releases/download/{ version }/{ name }.armv7hf{ archive-suffix }"

[package.metadata.binstall.overrides.x86_64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/{ version }/{ name }.amd64{ archive-suffix }"

[package.metadata.binstall.overrides.aarch64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/{ version }/{ name }.arm64{ archive-suffix }"

[package.metadata.binstall.overrides.armv7-unknown-linux-musleabi]
pkg-url = "{ repo }/releases/download/{ version }/{ name }.armv7{ archive-suffix }"

[package.metadata.binstall.overrides.armv7-unknown-linux-musleabihf]
pkg-url = "{ repo }/releases/download/{ version }/{ name }.armv7hf{ archive-suffix }"

[profile.release]
strip = true
opt-level = "z"
lto = true
