[package]
name = "tomlq"
version = "0.1.6"
authors = [
    "Natalia Maximo <iam@natalia.dev>",
    "James Munns <james.munns@gmail.com>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/cryptaliagy/tomlq"
description = "A tool for obtaining information from a TOML file on the command line"

[dependencies]
toml = "0.8"
clap = { version = "4.5", features = ["derive", "usage", "help"], optional = true }
colored = { version = "2.1.0", optional = true }
thiserror = "1.0.61"
console = { version = "0.15.8", features = ["windows-console-colors"], optional = true }
anyhow = { version = "1.0.86", features = ["backtrace"], optional = true }
bat = { version = "0.24.0", optional = true, default-features = false, features = ["build-assets", "regex-fancy"] }


[dependencies.serde_json] 
version = "1.0.120"
features = [
    "indexmap",
    "preserve_order",
    "raw_value",
    "unbounded_depth",
]
optional = true

[features]
default = ["json", "bin"]
json = ["dep:serde_json"]
# Syntax highlighting feature for the tq CLI -- optional, disabled by default.
syntax-highlighting = ["bin", "dep:bat", "dep:console"]
bin = ["dep:clap", "dep:anyhow"]

# THIS FEATURE IS FOR THE PREVIOUS VERSION OF TOMLQ AND IS NOT USED BY THE TQ BINARY.
# IT WILL BE REMOVED IN A FUTURE RELEASE.
color = ["dep:colored"]

[lib]
name = "tq"
test = true
doctest = true
doc = true

[[bin]]
name = "tq"
test = false
required-features = ["bin"]

[package.metadata.binstall]
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/{ version }/{ name }.amd64{ archive-suffix }"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/{ version }/{ name }.arm64{ archive-suffix }"

[package.metadata.binstall.overrides.armv7-unknown-linux-gnueabi]
pkg-url = "{ repo }/releases/download/{ version }/{ name }.armv7{ archive-suffix }"

[package.metadata.binstall.overrides.armv7-unknown-linux-gnueabihf]
pkg-url = "{ repo }/releases/download/{ version }/{ name }.armv7hf{ archive-suffix }"

[package.metadata.binstall.overrides.x86_64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/{ version }/{ name }.amd64{ archive-suffix }"

[package.metadata.binstall.overrides.aarch64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/{ version }/{ name }.arm64{ archive-suffix }"

[package.metadata.binstall.overrides.armv7-unknown-linux-musleabi]
pkg-url = "{ repo }/releases/download/{ version }/{ name }.armv7{ archive-suffix }"

[package.metadata.binstall.overrides.armv7-unknown-linux-musleabihf]
pkg-url = "{ repo }/releases/download/{ version }/{ name }.armv7hf{ archive-suffix }"

[profile.release]
strip = true
opt-level = "z"
lto = true
